# intralogistics-sim-with-diff-drive-robot

./: .gitmodules  CMakeLists.txt  README.md  package.xml
bringup/config/: diffbot_controllers.yaml
bringup/launch/: diffbot.launch.py  diffbot_gazebo_sim.launch.py
description/launch/: view_robot.launch.py
description/ros2_control/: diffbot.ros2_control.xacro
description/urdf/: camera.xacro  depth_camera.xacro  diffbot.urdf.xacro  lidar.xacro  robot.urdf.xacro
doc/: userdoc.rst
gui/: gui.config
rviz/: diffbot_sensors.rviz
scripts/: teleop_safety_filter.py
test/: test_diffbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
worlds/: empty_sensors.sdf  warehouse_sensors.sdf
